<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonModifyAccount"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/buttonModifyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/buttonModifyAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecommendation" />

    <Button
        android:id="@+id/buttonTaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTaste"
        app:layout_constraintBottom_toTopOf="@+id/buttonModifyAccount"
        app:layout_constraintEnd_toStartOf="@+id/buttonCloset"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecommendation"
        app:layout_constraintVertical_bias="0.269" />

    <Button
        android:id="@+id/buttonCloset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/buttonCloset"
        app:layout_constraintBottom_toTopOf="@+id/buttonModifyAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRecommendation"
        app:layout_constraintVertical_bias="0.269" />

    <Button
        android:id="@+id/buttonRecommendation"
        android:layout_width="296dp"
        android:layout_height="49dp"
        android:layout_marginTop="200dp"
        android:text="@string/buttonRecommendation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>